--- a/app/views/site/user-create.html
+++ b/app/views/site/user-create.html
@@ -4,12 +4,17 @@
 
 <h2>Create</h2>
 
-{# <form action="/user/store" method="post"> #}
-<form action="/user/delete" method="post">
-    {# <input type="hidden" name="_METHOD" value="PUT"> #}
-    <input type="hidden" name="_METHOD" value="DELETE">
-    {# <button type="submit">Cadastrar</button> #}
-    <button type="submit">Deletar</button>
+<form action="/user/store" method="post">
+    <input type="text" name="username" class="form-control" placeholder="Usuário">
+    {{messages.username.message}}<br />
+    <input type="text" name="firstname" class="form-control" placeholder="Primeiro Nome">
+    {{messages.firstname.message}}<br />
+    <input type="text" name="lastname" class="form-control" placeholder="Último Nome">
+    {{messages.lastname.message}}<br />
+    <input type="text" name="email" class="form-control" placeholder="E-mail">
+    {{messages.email.message}}<br />
+    <hr>
+    <button type="submit" class="btn btn-primary">Cadastrar</button>
 </form>
 
 {% endblock %}
