--- a/app/views/site/footer.html
+++ b/app/views/site/footer.html
@@ -1,1 +1,5 @@
-<h3>Footer</h3>
+<footer class="footer mt-auto py-3 bg-light">
+    <div class="container">
+      <span class="text-muted">Place sticky footer content here.</span>
+    </div>
+  </footer>
