--- a/app/views/site/header.html
+++ b/app/views/site/header.html
@@ -1,1 +1,20 @@
-<h3>Header</h3>
+<br>
+<div id="header">
+    <div>
+        <a href="/" class="btn btn-success btn-sm">Home</a>
+    </div>
+    <div>
+        
+        {% if logged_in %} Bem-vindo, {{user.firstname}} {{user.lastname}}.
+
+        <a href="/logout" class="btn btn-danger btn-sm">Logout</a>
+
+        {% else %}
+        
+        Bem-vindo, visitante.
+
+        <a href="/login" class="btn btn-secondary btn-sm">Login</a>
+
+        {% endif %}
+    </div>
+</div>
