--- a/app/views/site/user-create.html
+++ b/app/views/site/user-create.html
@@ -4,15 +4,20 @@
 
 <h2>Create</h2>
 
+{{messages.message.message|message(messages.message.alert)|raw}}
+
 <form action="/user/store" method="post">
     <input type="text" name="username" class="form-control" placeholder="Usuário">
-    {{messages.username.message}}<br />
+    {{messages.username.message|message(messages.username.alert)|raw}}<br />
     <input type="text" name="firstname" class="form-control" placeholder="Primeiro Nome">
-    {{messages.firstname.message}}<br />
+    {{messages.firstname.message|message(messages.firstname.alert)|raw}}<br />
     <input type="text" name="lastname" class="form-control" placeholder="Último Nome">
-    {{messages.lastname.message}}<br />
+    {{messages.lastname.message|message(messages.lastname.alert)|raw}}<br />
     <input type="text" name="email" class="form-control" placeholder="E-mail">
-    {{messages.email.message}}<br />
+    {{messages.email.message|message(messages.email.alert)|raw}}<br />
+    <input type="password" name="password" class="form-control">
+    {{messages.password.password|message(messages.password.alert)|raw}}<br />
+
     <hr>
     <button type="submit" class="btn btn-primary">Cadastrar</button>
 </form>
