--- a/public/assets/site/css/style.css
+++ b/public/assets/site/css/style.css
@@ -8,3 +8,11 @@ body {
   box-sizing: border-box;
   font-family: 'Work Sans', sans-serif;
 }
+#header{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.btn--inline{
+    display: inline;
+}
